--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="background">#FFF7E1</color>
     <color name="light_background">#FFFBF1</color>
-    <color name="border">#FFE396</color>
+    <color name="orange">#FFE396</color>
     <color name="text">#807166</color>
     <color name="finished">#E9E1DB</color>
 
