--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,15 +8,27 @@
     android:background="@color/light_background"
     tools:context=".MainActivity">
 
-    <Button
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btn_new"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom = "true"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="36dp"
+        android:backgroundTint="@color/orange"
+        app:borderWidth="0dp"
+        android:src="@drawable/baseline_add_24"/>
+
+    <Button
+        android:id="@+id/btn_meal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/add_timer" />
+        android:text="Find Meal" />
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@+id/btn_meal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/btn_new">
 
@@ -24,9 +36,6 @@
             android:id="@+id/ll_timers"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="5dp"/>
-
+            android:orientation="vertical"/>
     </androidx.core.widget.NestedScrollView>
-
-</LinearLayout>
+</RelativeLayout>
