--- a/app/src/main/res/layout/timer_layout.xml
+++ b/app/src/main/res/layout/timer_layout.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_margin="10dp"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_margin="20dp"
     android:background="@drawable/border"
     android:orientation="horizontal">
 
@@ -11,23 +13,24 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:theme="@style/NumberPickerText" />
-
     <NumberPicker
         android:id="@+id/np_minutes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:theme="@style/NumberPickerText" />
-
     <NumberPicker
         android:id="@+id/np_seconds"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:theme="@style/NumberPickerText" />
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="10dp">
+        android:orientation="vertical"
+        android:padding="10dp"
+        android:gravity="center">
+
 
         <EditText
             android:id="@+id/et_name"
@@ -36,20 +39,52 @@
             android:hint="@string/timer"
             android:inputType="textAutoCorrect" />
 
-        <Button
-            android:id="@+id/btn_start"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/et_name"
-            android:text="@string/start" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:orientation="horizontal"
+            android:gravity="center">
 
-        <Button
-            android:id="@+id/btn_delete"
-            android:layout_width="wrap_content"
+            <ImageButton
+                android:id="@+id/btn_start"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:src="@drawable/baseline_play_arrow_24"
+                android:background="@null"
+                app:tint="@color/text"
+                android:contentDescription="@string/start_stop_timer" />
+
+            <ImageButton
+                android:id="@+id/btn_reset"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                android:src="@drawable/baseline_restore_24"
+                app:tint="@color/text"
+                android:contentDescription="@string/reset_timer" />
+
+            <ImageButton
+                android:id="@+id/btn_delete"
+                android:src="@drawable/baseline_delete_forever_24"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                app:tint="@color/text"
+                android:contentDescription="@string/delete_timer" />
+
+        </LinearLayout>
+
+
+        <Spinner
+            android:id="@+id/sp_alarm"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/et_name"
-            android:layout_marginStart="3dp"
-            android:layout_toEndOf="@+id/btn_start"
-            android:text="@string/del" />
-    </RelativeLayout>
+            android:layout_marginTop="20dp"
+/>
+    </LinearLayout>
+
 </LinearLayout>
